integration_tests/codegen_fail/fail/union/trait_wrong_method_return_type.rs
use juniper::{graphql_union, GraphQLObject};

#[graphql_union]
trait Character {
    fn a(&self) -> &Human;
}

#[derive(GraphQLObject)]
pub struct Human {
    id: String,
}

fn main() {}
